syntax = "proto3";

package app.v1.user;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/rpc/status.proto";
import "app/v1/user/user.proto";

option go_package = "github.com/eliofery/golang-grpc/pkg/api/app/v1/user";

message GetUsersResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "GetUsersResponse"
      description: "Get all user response"
    }
  };

  repeated User users = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    title: "Users"
    description: "List of users"
  }];

  google.rpc.Status status = 2;
}
